# rust-svelte-crud-app

./: .gitignore  Cargo.toml  README.md
client/: .svg-to-tsrc  package-lock.json  package.json  tsconfig.json
client/public/: global.css  index.html
client/src/: App.svelte  index.ts  store.ts
client/src/components/: AsyncColorPicker.svelte  AsyncTextBox.svelte  AutoHeightTextarea.svelte  Date.svelte  Icon.svelte  InlineTag.svelte  Loading.svelte  Overlay.svelte  Question.svelte  QuestionInput.svelte  RemovableTag.svelte  TagEditor.svelte  TagEditorOverlay.svelte  TagFilter.svelte  TagSelector.svelte
client/src/components/modal/: ConfirmModal.svelte  Modal.svelte
client/src/lib/: api.ts  color.ts  icons.ts
migrations/: 20210312160009_initial.sql  20210319155803_tag-color.sql
src/: filters.rs  handlers.rs  main.rs  models.rs
