[package]
name = "seikatsu-server"
version = "0.1.0"
authors = ["jf908 <josh@thefindons.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "sqlite", "chrono", "json" ] }
warp = "0.3"
anyhow = " 1.0"
futures = "0.3"